--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@ li a:hover:not(.active) {
      </ul>
       <br>
       <div id="about", class="w3-container w3-card w3-white w3-margin-bottom">
-        <p>I, Shinjan Dutta, am a student of the Master of Science in Electrical Engineering program at Northwestern University. Real world applications of programming have enthralled me and I aspire to solve these real word problems using Machine Learning techniques. My areas of interests include Deep Learning and Computer Vision. 
+        <p>I, Shinjan Dutta, am a student of the Master of Science in Electrical Engineering program at Northwestern University. 
+          I am curious and driven to innovate in the field of Artificial Intellegince.
+           
+<!--           Real world applications of programming have enthralled me and I aspire to solve these real word problems using Machine Learning techniques.
+          My areas of interests include Deep Learning and Computer Vision.  -->
         </p>
         <p>
         The coursework from my current and past programs like Advanced Computer Vision, Machine Learning, Neural Networks and Fuzzy Logic, Image Processing, Data Analytics, Statistical Pattern Recognition etc, helped in developing my expertise in areas of programming and will only strengthen it with the upcoming courses like, Deep Reinforcement Learning and Advanced Topics in Deep Learning. 
