--- a/index.html
+++ b/index.html
@@ -137,26 +137,26 @@ li a:hover:not(.active) {
       <div id="education" class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-mortar-board fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Northwestern University</b></h5>
+          <h5 class="w3-opacity"><b>Northwestern University, Illinois, USA</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019 - Present</h6>
-          <p>Master of Science in Artificial Intelligence.</p>
-          Relevant Coursework:  Advanced Computer Vision, Geospatial Vision and Visualization, Deep Learning Foundations, Data Science Seminar, StatisticalPattern Recognition, Statistical Language Modeling, Frameworks of AI, Machine Learning, Design and Analysis of Algorithms, Industry Practicum in Intelligent Information Systems.
-          <hr>
+          <p>Master of Science in Electrical Engineering.</p>
+<!--           Relevant Coursework:  Advanced Computer Vision,  Deep Learning Foundations,  Statistical Pattern Recognition,  Machine Learning, Design and Analysis of Algorithms, Deep Learning for Practitioners, Introduction to AI
+          <hr> -->
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>K.J. Somaiya College of Engineering</b></h5>
+          <h5 class="w3-opacity"><b>Manipal Institute of Technology, Karnataka, India </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2019</h6>
-          <p>Bachelor of Technology in Computer Engineering</p>
-          <p>Relevant Coursework:  Machine Learning, Neural Networks and Fuzzy Logic, Data Analytics and Machine Learning, Data Warehousing and Mining, Relational Database Management, Advanced Database Management, Image Processing, Internet of Things, Theory of Computer Science, Discrete Structure and Graph Theory.
+          <p>Bachelor of Technology in Mechanical Engineering</p>
+<!--           <p>Relevant Coursework:  Machine Learning, Image Processing, Discrete Structure and Graph Theory.
           </p>
-          <hr>
-        </div>
+          <hr> -->
+<!--         </div>
         <div class="w3-container">
-          <p>Other Courses:   Machine Leaning by Stanford University (Coursera), Deep learning specialization bydeeplearning.ai, Oracle certified Core and Advance Java, C++</p>
+          <p>Other Courses:   Machine Leaning by Stanford University (Coursera), Deep learning specialization by deeplearning.ai</p>
         </div>
       </div>
       <br>
-      
+       -->
       <div id="experience" class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
