--- a/index.html
+++ b/index.html
@@ -159,32 +159,32 @@ li a:hover:not(.active) {
        -->
       <div id="experience" class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
-        <div class="w3-container">
+<!--         <div class="w3-container">
           <h5 class="w3-opacity"><b>Machine Learning Intern | Sin Emerging Technologies</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2020 - Present</h6>
           <p>Working on making a AR/VR game for the purpose of exercising. Identifying positions of the user using Computer Vision techniques like Pose Estimation and guiding the user with the help of a chat bot</p>
           <hr>
-        </div>
+        </div> -->
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Graduate Research Assistant | Northwestern University</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2020 - Present</h6>
-          <p>Developing an econometric model using machine learning techniques to find the causal impact of Eco labels on demand steering.</p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2020 - Present</h6>
+          <p>I am working at the Image and Video Processing Lab under the guidance of Professor Aggelos Katsaggelos on various projects involving machine learning and deep learning for medical applicaions </p>
           <hr>
         </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Artificial Intelligence Intern | Home Drone</b></h5>
+<!--         <div class="w3-container">
+          <h5 class="w3-opacity"><b>Research Intern | Indian Institute of Space, Science and Technology</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2018 - Jan 2019</h6>
-          <p>Programmed and designed drones to develop a marketable product for specific applications. Worked on making drones smarter and fully automated by adding object detection and path detection techniques to program them for navigating in known indoor environments</p>
+          <p>Worked on a team building an autonomous humanoid robot prototype for the Indian Space Research Organization. I was involved in designing the knee of the robot and algorithms for its control via series linear actutaors. I was also involved in object detection for the robot using YOLO.</p>
           <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Machine Learning Intern | KJSCE</b></h5>
+        </div> -->
+<!--         <div class="w3-container">
+          <h5 class="w3-opacity"><b>Research Intern | Indian Institute of Technology- Madras (IIT-M), Chennai, India</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2017 - Jan 2018</h6>
-          <p>Worked on Human emotion detection and classification into the seven basic emotions. Used three techniques for facial expressions- Haar cascades, Convolutional Neural Network and Transfer learning, and recurrent neural network for speech. Achieved an accuracy of 96.39 on Haar cascades approach. </p>
-          <hr>
+          <p>Worked on mathematical modelling of the motion a three wheeled vehicle over a speed hump. The goal is to employ the use of advanced suspension systems and mitigate vibbrations. I used calculus, algebra and physics for the modelling and mitigation of vibrations </p>
+          <hr> -->
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Web Development Intern | kWatt Solutions, IIT Bombay.</b></h5>
+          <h5 class="w3-opacity"><b>Research Intern | Ford Motor Company, Sanand Vehicle Assembly Plant, Gujarat, India</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2017 - Jan 2018</h6>
           <p>Maintained and managed official websites of the organization. Added new webpages and additional features like webinars and live chat. Made the website secure and also easy to use and handle for visitors as well as company employees. </p><br>
         </div>
