--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ li a:hover:not(.active) {
           <center><h2>Shinjan Dutta</h2></center>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>MS in Electrical Engineering, Northwestern University</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>PhD in Electrical Engineering, Northwestern University</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Evanston, IL</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="mailto:shinjandutta2021@u.northwestern.edu">shinjandutta2021@u.northwestern.edu</a></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(702)-505-1979</p>
@@ -115,7 +115,7 @@ li a:hover:not(.active) {
      </ul>
       <br>
       <div id="about", class="w3-container w3-card w3-white w3-margin-bottom">
-        <p>I, Shinjan Dutta, am a student of the Master of Science in Electrical Engineering program at Northwestern University. 
+        <p>I, Shinjan Dutta, am a PhD candidate in the Electrical Engineering program at Northwestern University. 
           I am curious and driven to innovate in the field of Artificial Intellegince.
            
 <!--           Real world applications of programming have enthralled me and I aspire to solve these real word problems using Machine Learning techniques.
